@@ -1,3 +1,4 @@
 # Security
 mvn clean compile -Djetty.port=8082 jetty:run
 
+-XX:MaxPermSize=512M
